# Ser_Duncan_the_tall

./: .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.zkproxy  LICENSE  README.md  docker-compose.yml  openclaw.json  pyproject.toml
.claude/skills/zk-proxy/: SKILL.md
deploy/: ec2_setup.sh
gateway/: app.py  proof_runner.py
models/: build_risk_model.py  risk_verifier.onnx  risk_verifier.yaml  risk_verifier_jstprove_circuit.msgpack  risk_verifier_jstprove_circuit.txt  risk_verifier_jstprove_circuit_architecture.json  risk_verifier_jstprove_circuit_metadata.json  risk_verifier_jstprove_circuit_quantized_model.onnx  risk_verifier_jstprove_circuit_wandb.json  risk_verifier_jstprove_circuit_witness_solver.txt
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: serdunken.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/loki/: local-config.yml
monitoring/promtail/: config.yml
risk_builder/: calculator.py  fetcher.py  router.py
ui/: index.html
zk_estimator/: recompute.py  router.py  verifier.py  zkproxy.py  zkproxy_mcp.py  zkproxy_server.py  zkproxy_worker.py
